// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/AppContainer Routes should render  1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ErrorBoundary>
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/sign-in"
      />
      <PrivateRoute
        component={[Function]}
        exact={true}
        isSignedIn={true}
        path="/"
      />
      <RedirectRoute
        from="/questionnaire/:questionnaireId/design/:sectionId/:pageId"
        to="/q/:questionnaireId/page/:pageId/design"
      />
      <RedirectRoute
        from="/questionnaire/:questionnaireId/design/:sectionId"
        to="/q/:questionnaireId/section/:sectionId/design"
      />
      <PrivateRoute
        component={[Function]}
        exact={false}
        isSignedIn={true}
        path="/q/:questionnaireId/:entityName?/:entityId?/:tab?/:modifier?"
      />
      <Route
        component={[Function]}
        exact={true}
        path="*"
      />
    </Switch>
  </ErrorBoundary>
</Router>
`;

exports[`containers/AppContainer should render 1`] = `
<AppContainer>
  <ApolloProvider
    client={
      Object {
        "query": [MockFunction],
        "readQuery": [MockFunction],
      }
    }
  >
    <Provider
      store={
        Object {
          "dispatch": [MockFunction],
          "getState": [MockFunction],
          "subscribe": [MockFunction],
        }
      }
    >
      <Connect(Routes)
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      />
    </Provider>
  </ApolloProvider>
</AppContainer>
`;
